services section update

--- a/index.html
+++ b/index.html
@@ -144,6 +144,7 @@
                 width="370"
                 height="294"
               />
+              <p class="service-text">Десктопные приложения</p>
             </li>
             <li class="services-item">
               <img
@@ -152,6 +153,7 @@
                 width="370"
                 height="294"
               />
+              <p class="service-text">Мобильные приложения</p>
             </li>
             <li class="services-item">
               <img
@@ -160,6 +162,7 @@
                 width="370"
                 height="294"
               />
+              <p class="service-text">Дизайнерские решения</p>
             </li>
           </ul>
         </div>
