--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                 width="370"
                 height="294"
               />
-              <p class="service-text">Десктопные приложения</p>
+              <p class="service-description">Десктопные приложения</p>
             </li>
             <li class="services-item">
               <img
@@ -153,7 +153,7 @@
                 width="370"
                 height="294"
               />
-              <p class="service-text">Мобильные приложения</p>
+              <p class="service-description">Мобильные приложения</p>
             </li>
             <li class="services-item">
               <img
@@ -162,7 +162,7 @@
                 width="370"
                 height="294"
               />
-              <p class="service-text">Дизайнерские решения</p>
+              <p class="service-description">Дизайнерские решения</p>
             </li>
           </ul>
         </div>
