--- a/portfolio.html
+++ b/portfolio.html
@@ -104,6 +104,11 @@
                   width="370"
                   height="294"
                 />
+                <p class="gallery-description">
+                  Ресурс предлагает комплексные предложения с разным уровнем
+                  функционала и сервисов. Все это позволит посетителю получить
+                  исчерпывающие сведения о компании или частном лице.
+                </p>
                 <div class="gallery-content">
                   <h2 class="gallery-title">Технокряк</h2>
                   <p class="gallery-text">Веб-сайт</p>
