--- a/portfolio.html
+++ b/portfolio.html
@@ -98,17 +98,19 @@
           <ul class="gallery-list list">
             <li class="gallery-item">
               <a class="gallery-link link" href="#">
-                <img
-                  src="./images/our-project/tehnokryak.jpg"
-                  alt="Интерфейс сайта"
-                  width="370"
-                  height="294"
-                />
-                <p class="gallery-description">
-                  Ресурс предлагает комплексные предложения с разным уровнем
-                  функционала и сервисов. Все это позволит посетителю получить
-                  исчерпывающие сведения о компании или частном лице.
-                </p>
+                <div class="gallery-img-box">
+                  <img
+                    src="./images/our-project/tehnokryak.jpg"
+                    alt="Интерфейс сайта"
+                    width="370"
+                    height="294"
+                  />
+                  <p class="gallery-description">
+                    Ресурс предлагает комплексные предложения с разным уровнем
+                    функционала и сервисов. Все это позволит посетителю получить
+                    исчерпывающие сведения о компании или частном лице.
+                  </p>
+                </div>
                 <div class="gallery-content">
                   <h2 class="gallery-title">Технокряк</h2>
                   <p class="gallery-text">Веб-сайт</p>
