--- a/portfolio.html
+++ b/portfolio.html
@@ -119,12 +119,19 @@
             </li>
             <li class="gallery-item">
               <a class="gallery-link link" href="#">
-                <img
-                  src="./images/our-project/poster-no-gs.jpg"
-                  alt="Баскетболисты"
-                  width="370"
-                  height="294"
-                />
+                <div class="gallery-img-box">
+                  <img
+                    src="./images/our-project/poster-no-gs.jpg"
+                    alt="Баскетболисты"
+                    width="370"
+                    height="294"
+                  />
+                  <p class="gallery-description">
+                    Ресурс предлагает комплексные предложения с разным уровнем
+                    функционала и сервисов. Все это позволит посетителю получить
+                    исчерпывающие сведения о компании или частном лице.
+                  </p>
+                </div>
                 <div class="gallery-content">
                   <h2 class="gallery-title">
                     Постер New Orlean vs Golden Star
@@ -135,12 +142,19 @@
             </li>
             <li class="gallery-item">
               <a class="gallery-link link" href="#">
-                <img
-                  src="./images/our-project/seafood.jpg"
-                  alt="Интерфейс приложения"
-                  width="370"
-                  height="294"
-                />
+                <div class="gallery-img-box">
+                  <img
+                    src="./images/our-project/seafood.jpg"
+                    alt="Интерфейс приложения"
+                    width="370"
+                    height="294"
+                  />
+                  <p class="gallery-description">
+                    Ресурс предлагает комплексные предложения с разным уровнем
+                    функционала и сервисов. Все это позволит посетителю получить
+                    исчерпывающие сведения о компании или частном лице.
+                  </p>
+                </div>
                 <div class="gallery-content">
                   <h2 class="gallery-title">Ресторан Seafood</h2>
                   <p class="gallery-text">Приложение</p>
@@ -149,12 +163,19 @@
             </li>
             <li class="gallery-item">
               <a class="gallery-link link" href="#">
-                <img
-                  src="./images/our-project/project-prime.jpg"
-                  alt="Наушники"
-                  width="370"
-                  height="294"
-                />
+                <div class="gallery-img-box">
+                  <img
+                    src="./images/our-project/project-prime.jpg"
+                    alt="Наушники"
+                    width="370"
+                    height="294"
+                  />
+                  <p class="gallery-description">
+                    Ресурс предлагает комплексные предложения с разным уровнем
+                    функционала и сервисов. Все это позволит посетителю получить
+                    исчерпывающие сведения о компании или частном лице.
+                  </p>
+                </div>
                 <div class="gallery-content">
                   <h2 class="gallery-title">Проект Prime</h2>
                   <p class="gallery-text">Маркетинг</p>
@@ -163,12 +184,19 @@
             </li>
             <li class="gallery-item">
               <a class="gallery-link link" href="#">
-                <img
-                  src="./images/our-project/project-boxes.jpg"
-                  alt="Коробки"
-                  width="370"
-                  height="294"
-                />
+                <div class="gallery-img-box">
+                  <img
+                    src="./images/our-project/project-boxes.jpg"
+                    alt="Коробки"
+                    width="370"
+                    height="294"
+                  />
+                  <p class="gallery-description">
+                    Ресурс предлагает комплексные предложения с разным уровнем
+                    функционала и сервисов. Все это позволит посетителю получить
+                    исчерпывающие сведения о компании или частном лице.
+                  </p>
+                </div>
                 <div class="gallery-content">
                   <h2 class="gallery-title">Проект Boxes</h2>
                   <p class="gallery-text">Приложение</p>
@@ -177,12 +205,19 @@
             </li>
             <li class="gallery-item">
               <a class="gallery-link link" href="#">
-                <img
-                  src="./images/our-project/inspitation.jpg"
-                  alt="Интерфейс сайта"
-                  width="370"
-                  height="294"
-                />
+                <div class="gallery-img-box">
+                  <img
+                    src="./images/our-project/inspitation.jpg"
+                    alt="Интерфейс сайта"
+                    width="370"
+                    height="294"
+                  />
+                  <p class="gallery-description">
+                    Ресурс предлагает комплексные предложения с разным уровнем
+                    функционала и сервисов. Все это позволит посетителю получить
+                    исчерпывающие сведения о компании или частном лице.
+                  </p>
+                </div>
                 <div class="gallery-content">
                   <h2 class="gallery-title">Inspiration has no Borders</h2>
                   <p class="gallery-text">Веб-сайт</p>
@@ -191,12 +226,19 @@
             </li>
             <li class="gallery-item">
               <a class="gallery-link link" href="#">
-                <img
-                  src="./images/our-project/limited-publish.jpg"
-                  alt="Журнал"
-                  width="370"
-                  height="294"
-                />
+                <div class="gallery-img-box">
+                  <img
+                    src="./images/our-project/limited-publish.jpg"
+                    alt="Журнал"
+                    width="370"
+                    height="294"
+                  />
+                  <p class="gallery-description">
+                    Ресурс предлагает комплексные предложения с разным уровнем
+                    функционала и сервисов. Все это позволит посетителю получить
+                    исчерпывающие сведения о компании или частном лице.
+                  </p>
+                </div>
                 <div class="gallery-content">
                   <h2 class="gallery-title">Издание Limited Edition</h2>
                   <p class="gallery-text">Дизайн</p>
@@ -205,12 +247,19 @@
             </li>
             <li class="gallery-item">
               <a class="gallery-link link" href="#">
-                <img
-                  src="./images/our-project/project-lab.jpg"
-                  alt="Бирка"
-                  width="370"
-                  height="294"
-                />
+                <div class="gallery-img-box">
+                  <img
+                    src="./images/our-project/project-lab.jpg"
+                    alt="Бирка"
+                    width="370"
+                    height="294"
+                  />
+                  <p class="gallery-description">
+                    Ресурс предлагает комплексные предложения с разным уровнем
+                    функционала и сервисов. Все это позволит посетителю получить
+                    исчерпывающие сведения о компании или частном лице.
+                  </p>
+                </div>
                 <div class="gallery-content">
                   <h2 class="gallery-title">Проект LAB</h2>
                   <p class="gallery-text">Маркетинг</p>
@@ -219,12 +268,19 @@
             </li>
             <li class="gallery-item">
               <a class="gallery-link link" href="#">
-                <img
-                  src="./images/our-project/growing-app.jpg"
-                  alt="Ноутбук"
-                  width="370"
-                  height="294"
-                />
+                <div class="gallery-img-box">
+                  <img
+                    src="./images/our-project/growing-app.jpg"
+                    alt="Ноутбук"
+                    width="370"
+                    height="294"
+                  />
+                  <p class="gallery-description">
+                    Ресурс предлагает комплексные предложения с разным уровнем
+                    функционала и сервисов. Все это позволит посетителю получить
+                    исчерпывающие сведения о компании или частном лице.
+                  </p>
+                </div>
                 <div class="gallery-content">
                   <h2 class="gallery-title">Growing Business</h2>
                   <p class="gallery-text">Приложение</p>
